TestSuite/errors/err0427.pas
{$define asd}
{$ifdef asd}
{$resource 'НеСуществующийФайл'}
{$endif asd}
{$undef asd}

begin

end.